img and vid spacing fixed

--- a/Example_test/css/style.css
+++ b/Example_test/css/style.css
@@ -15,28 +15,28 @@ body {
 }
 
 .imgFood{
-  margin-bottom: 77px;
-  margin-top: 6px;
+  margin-bottom: 50px;
+  margin-top: 45px;
  }
  
  .row-0{
-  margin-top: 15px;
+  margin-top: 25px;
  }
  
  .row-1{
-  margin-top: 15px;
+  margin-top: 25px;
  }
  
  .row-2{
-  margin-top: 15px;
+  margin-top: 25px;
  }
  
  .row-3{
-  margin-top: 15px;
+  margin-top: 25px;
  }
  
  .row-4{
-  margin-top: 15px;
+  margin-top: 25px;
  }
 
 a {
